<resources>
    <string name="app_name">Movie DB</string>
    <string name="label_search">Search</string>
    <string name="hint_search_movie">Search movie…</string>
    <string name="content_description_sad_face">Image of sad face emoji</string>
    <string name="title_movie_not_found">Oh no, you\'ve got nothing!</string>
    <string name="description_movie_not_found">Don\'t worry, you can always try another keywords</string>
    <string name="action_back">Back</string>
    <string name="action_search_trailer">Search Trailer</string>
    <string name="title_actors">Actors</string>
    <string name="title_categories">Categories</string>
    <string name="error_title">Failed</string>
    <string name="error_no_internet">No Internet Connection</string>
    <string name="error_unknown">Unknown error: $1%s</string>
    <string name="action_try_again">Try Again</string>
    <string name="label_rating">%1$.2f/10</string>
    <string name="label_meta">%1$s (%2$s) • %3$s</string>
    <string name="error_youtube_not_found">No app found to handle YouTube search.</string>
    <string name="template_trailer_youtube_search">Trailer %1$s</string>
</resources>